limit rubber entry to 2 characters

--- a/live/club_webapps/byron.html
+++ b/live/club_webapps/byron.html
@@ -272,7 +272,7 @@
                 <li class="arrow" id="L2-1"><a href="#match">Beeston Valley 2  <small class="L2-1D"></small></a></li>
                 <li class="arrow" id="L2-2"><a href="#match">St Giles 1  <small class="L2-2D"></small></a></li>
                 <li class="arrow" id="L2-3"><a href="#match">St Giles 2  <small class="L2-3D"></small></a></li>
-                <li class="arrow" id="L2-4"><a href="#match">Trent University  <small class="L2-4D"></small></a></li>
+                <li class="arrow" id="L2-4"><a href="#match">Trent Uni Students  <small class="L2-4D"></small></a></li>
                 <li class="arrow" id="L2-5"><a href="#match">University 2  <small class="L2-5D"></small></a></li>
             </ul>
         </div>
@@ -441,19 +441,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
