--- a/live/club_webapps/david_lloyd_wb.html
+++ b/live/club_webapps/david_lloyd_wb.html
@@ -95,22 +95,22 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 3B</small></a></li>
+                <li class="arrow"><a href="#M">Mens  <small> Division 3B</small></a></li>
             </ul>
         </div>
 
-        <div id="M1" class="fixtures">
+        <div id="M" class="fixtures">
             <div class="toolbar">
-                <h1>Mens 1</h1>
+                <h1>Mens </h1>
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 2  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">Carlton 3  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">East Leake 2  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Naseeb 2  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">St Giles 1  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">University 3  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M-1"><a href="#match">Beeston Fields 2  <small class="M-1D"></small></a></li>
+                <li class="arrow" id="M-2"><a href="#match">Carlton 3  <small class="M-2D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">East Leake 2  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">Naseeb 2  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">St Giles 1  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-6"><a href="#match">University 3  <small class="M-6D"></small></a></li>
             </ul>
         </div>
 
@@ -278,19 +278,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
