--- a/live/club_webapps/trent_uni_students.html
+++ b/live/club_webapps/trent_uni_students.html
@@ -95,6 +95,39 @@
             </div>
             <ul class="rounded">
 
+                <li class="arrow"><a href="#M">Mens  <small> Division 6A</small></a></li>
+                <li class="arrow"><a href="#L">Ladies  <small> Division 4</small></a></li>
+            </ul>
+        </div>
+
+        <div id="M" class="fixtures">
+            <div class="toolbar">
+                <h1>Mens </h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="M-1"><a href="#match">Arboretum 3  <small class="M-1D"></small></a></li>
+                <li class="arrow" id="M-2"><a href="#match">Arboretum 3  <small class="M-2D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">Experian  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">Experian  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">Rushcliffe Arena 2  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-6"><a href="#match">Rushcliffe Arena 2  <small class="M-6D"></small></a></li>
+                <li class="arrow" id="M-7"><a href="#match">Southwell Centre 3  <small class="M-7D"></small></a></li>
+                <li class="arrow" id="M-8"><a href="#match">Southwell Centre 3  <small class="M-8D"></small></a></li>
+            </ul>
+        </div>
+
+        <div id="L" class="fixtures">
+            <div class="toolbar">
+                <h1>Ladies </h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="L-1"><a href="#match">Beeston Valley 2  <small class="L-1D"></small></a></li>
+                <li class="arrow" id="L-2"><a href="#match">Byron 2  <small class="L-2D"></small></a></li>
+                <li class="arrow" id="L-3"><a href="#match">St Giles 1  <small class="L-3D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">St Giles 2  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-5"><a href="#match">University 2  <small class="L-5D"></small></a></li>
             </ul>
         </div>
 
@@ -262,19 +295,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
