--- a/live/club_webapps/unity.html
+++ b/live/club_webapps/unity.html
@@ -108,9 +108,10 @@
             <ul class="rounded">
                 <li class="arrow" id="M-1"><a href="#match">Beeston Valley 3  <small class="M-1D"></small></a></li>
                 <li class="arrow" id="M-2"><a href="#match">East Leake 4  <small class="M-2D"></small></a></li>
-                <li class="arrow" id="M-3"><a href="#match">Redhill 2  <small class="M-3D"></small></a></li>
-                <li class="arrow" id="M-4"><a href="#match">St Giles 3  <small class="M-4D"></small></a></li>
-                <li class="arrow" id="M-5"><a href="#match">Woodborough 2  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">Forest 3  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">Redhill 2  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">St Giles 3  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-6"><a href="#match">Woodborough 2  <small class="M-6D"></small></a></li>
             </ul>
         </div>
 
@@ -293,19 +294,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
