--- a/live/club_webapps/west_bridgford_le.html
+++ b/live/club_webapps/west_bridgford_le.html
@@ -378,19 +378,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
