--- a/live/club_webapps/arboretum.html
+++ b/live/club_webapps/arboretum.html
@@ -145,8 +145,8 @@
                 <li class="arrow" id="M3-4"><a href="#match">Rushcliffe Arena 2  <small class="M3-4D"></small></a></li>
                 <li class="arrow" id="M3-5"><a href="#match">Southwell Centre 3  <small class="M3-5D"></small></a></li>
                 <li class="arrow" id="M3-6"><a href="#match">Southwell Centre 3  <small class="M3-6D"></small></a></li>
-                <li class="arrow" id="M3-7"><a href="#match">Trent University  <small class="M3-7D"></small></a></li>
-                <li class="arrow" id="M3-8"><a href="#match">Trent University  <small class="M3-8D"></small></a></li>
+                <li class="arrow" id="M3-7"><a href="#match">Trent Uni Students  <small class="M3-7D"></small></a></li>
+                <li class="arrow" id="M3-8"><a href="#match">Trent Uni Students  <small class="M3-8D"></small></a></li>
             </ul>
         </div>
 
@@ -359,19 +359,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
