--- a/live/club_webapps/beeston_fields.html
+++ b/live/club_webapps/beeston_fields.html
@@ -128,7 +128,7 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="M2-1"><a href="#match">Carlton 3  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">David Lloyd WB 1  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">David Lloyd WB  <small class="M2-2D"></small></a></li>
                 <li class="arrow" id="M2-3"><a href="#match">East Leake 2  <small class="M2-3D"></small></a></li>
                 <li class="arrow" id="M2-4"><a href="#match">Naseeb 2  <small class="M2-4D"></small></a></li>
                 <li class="arrow" id="M2-5"><a href="#match">St Giles 1  <small class="M2-5D"></small></a></li>
@@ -391,19 +391,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
