--- a/live/club_webapps/experian.html
+++ b/live/club_webapps/experian.html
@@ -111,8 +111,8 @@
                 <li class="arrow" id="M-4"><a href="#match">Rushcliffe Arena 2  <small class="M-4D"></small></a></li>
                 <li class="arrow" id="M-5"><a href="#match">Southwell Centre 3  <small class="M-5D"></small></a></li>
                 <li class="arrow" id="M-6"><a href="#match">Southwell Centre 3  <small class="M-6D"></small></a></li>
-                <li class="arrow" id="M-7"><a href="#match">Trent University  <small class="M-7D"></small></a></li>
-                <li class="arrow" id="M-8"><a href="#match">Trent University  <small class="M-8D"></small></a></li>
+                <li class="arrow" id="M-7"><a href="#match">Trent Uni Students  <small class="M-7D"></small></a></li>
+                <li class="arrow" id="M-8"><a href="#match">Trent Uni Students  <small class="M-8D"></small></a></li>
             </ul>
         </div>
 
@@ -280,19 +280,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
