--- a/live/club_webapps/forest.html
+++ b/live/club_webapps/forest.html
@@ -97,6 +97,7 @@
 
                 <li class="arrow"><a href="#M1">Mens 1 <small>Premier </small></a></li>
                 <li class="arrow"><a href="#M2">Mens 2 <small> Division 1</small></a></li>
+                <li class="arrow"><a href="#M3">Mens 3 <small> Division 5B</small></a></li>
                 <li class="arrow"><a href="#X1">Mixed 1 <small>Premier </small></a></li>
                 <li class="arrow"><a href="#X2">Mixed 2 <small> Division 1</small></a></li>
                 <li class="arrow"><a href="#X3">Mixed 3 <small> Division 2B</small></a></li>
@@ -134,6 +135,21 @@
                 <li class="arrow" id="M2-5"><a href="#match">Mapperley Park 2  <small class="M2-5D"></small></a></li>
                 <li class="arrow" id="M2-6"><a href="#match">University 1  <small class="M2-6D"></small></a></li>
                 <li class="arrow" id="M2-7"><a href="#match">University 2  <small class="M2-7D"></small></a></li>
+            </ul>
+        </div>
+
+        <div id="M3" class="fixtures">
+            <div class="toolbar">
+                <h1>Mens 3</h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="M3-1"><a href="#match">Beeston Valley 3  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">East Leake 4  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-3"><a href="#match">Redhill 2  <small class="M3-3D"></small></a></li>
+                <li class="arrow" id="M3-4"><a href="#match">St Giles 3  <small class="M3-4D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">Unity  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Woodborough 2  <small class="M3-6D"></small></a></li>
             </ul>
         </div>
 
@@ -377,19 +393,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
