--- a/live/club_webapps/st_giles.html
+++ b/live/club_webapps/st_giles.html
@@ -114,7 +114,7 @@
             <ul class="rounded">
                 <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 2  <small class="M1-1D"></small></a></li>
                 <li class="arrow" id="M1-2"><a href="#match">Carlton 3  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">David Lloyd WB 1  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">David Lloyd WB  <small class="M1-3D"></small></a></li>
                 <li class="arrow" id="M1-4"><a href="#match">East Leake 2  <small class="M1-4D"></small></a></li>
                 <li class="arrow" id="M1-5"><a href="#match">Naseeb 2  <small class="M1-5D"></small></a></li>
                 <li class="arrow" id="M1-6"><a href="#match">University 3  <small class="M1-6D"></small></a></li>
@@ -144,9 +144,10 @@
             <ul class="rounded">
                 <li class="arrow" id="M3-1"><a href="#match">Beeston Valley 3  <small class="M3-1D"></small></a></li>
                 <li class="arrow" id="M3-2"><a href="#match">East Leake 4  <small class="M3-2D"></small></a></li>
-                <li class="arrow" id="M3-3"><a href="#match">Redhill 2  <small class="M3-3D"></small></a></li>
-                <li class="arrow" id="M3-4"><a href="#match">Unity  <small class="M3-4D"></small></a></li>
-                <li class="arrow" id="M3-5"><a href="#match">Woodborough 2  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-3"><a href="#match">Forest 3  <small class="M3-3D"></small></a></li>
+                <li class="arrow" id="M3-4"><a href="#match">Redhill 2  <small class="M3-4D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">Unity  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Woodborough 2  <small class="M3-6D"></small></a></li>
             </ul>
         </div>
 
@@ -204,7 +205,7 @@
                 <li class="arrow" id="L1-1"><a href="#match">Beeston Valley 2  <small class="L1-1D"></small></a></li>
                 <li class="arrow" id="L1-2"><a href="#match">Byron 2  <small class="L1-2D"></small></a></li>
                 <li class="arrow" id="L1-3"><a href="#match">St Giles 2  <small class="L1-3D"></small></a></li>
-                <li class="arrow" id="L1-4"><a href="#match">Trent University  <small class="L1-4D"></small></a></li>
+                <li class="arrow" id="L1-4"><a href="#match">Trent Uni Students  <small class="L1-4D"></small></a></li>
                 <li class="arrow" id="L1-5"><a href="#match">University 2  <small class="L1-5D"></small></a></li>
             </ul>
         </div>
@@ -218,7 +219,7 @@
                 <li class="arrow" id="L2-1"><a href="#match">Beeston Valley 2  <small class="L2-1D"></small></a></li>
                 <li class="arrow" id="L2-2"><a href="#match">Byron 2  <small class="L2-2D"></small></a></li>
                 <li class="arrow" id="L2-3"><a href="#match">St Giles 1  <small class="L2-3D"></small></a></li>
-                <li class="arrow" id="L2-4"><a href="#match">Trent University  <small class="L2-4D"></small></a></li>
+                <li class="arrow" id="L2-4"><a href="#match">Trent Uni Students  <small class="L2-4D"></small></a></li>
                 <li class="arrow" id="L2-5"><a href="#match">University 2  <small class="L2-5D"></small></a></li>
             </ul>
         </div>
@@ -387,19 +388,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
