--- a/live/club_webapps/woodborough.html
+++ b/live/club_webapps/woodborough.html
@@ -222,18 +222,29 @@
                 <a class="back" href="#scorecard">Match</a>
                 <a class="button flip" id="ShowPreview" href="#notes">Report</a>
             </div>
-        <ul class="individual">
-		<li><select id="toggleTeam">
-				<option value ="0">Home</option>
-				<option value ="1">Away</option>
-				<option value ="2">Home - Away</option>
-		</select></li>
-		<li><select id="toggleType">
-				<option value ="0">Sequence</option>
-				<option value ="1">Rubbers</option>
-				<option value ="2">Games</option>
-				<option value ="3">Aces</option>
-		</select></li></ul>
+
+		<table id="ovsummary" class="summary">
+            	<tr>
+            		<td></td>
+            		<td>Rubbers</td>
+            		<td>Games</td>
+            		<td>Aces</td>
+            	</tr>
+            	<tr>
+            		<td id="homeClub"></td>
+            		<td id="homeRubbers"></td>
+            		<td id="homeGames"></td>
+            		<td id="homeAces"></td>
+            	</tr>
+            	<tr>
+            		<td id="awayClub"></td>
+            		<td id="awayRubbers"></td>
+            		<td id="awayGames"></td>
+            		<td id="awayAces"></td>
+            	</tr>
+		</table>        
+		
+		<br />
 
 		<table id="ovtable" class="overview">
             	<tr>
@@ -262,28 +273,6 @@
             	</tr>
 		</table>
 
-		<br />
-
-		<table id="ovsummary" class="summary">
-            	<tr>
-            		<td></td>
-            		<td>Rubbers</td>
-            		<td>Games</td>
-            		<td>Aces</td>
-            	</tr>
-            	<tr>
-            		<td id="homeClub"></td>
-            		<td id="homeRubbers"></td>
-            		<td id="homeGames"></td>
-            		<td id="homeAces"></td>
-            	</tr>
-            	<tr>
-            		<td id="awayClub"></td>
-            		<td id="awayRubbers"></td>
-            		<td id="awayGames"></td>
-            		<td id="awayAces"></td>
-            	</tr>
-		</table>
 	</div>
 	<div id="rubber">
 		<div class="toolbar">
@@ -294,19 +283,19 @@
 		<h2>Games</h2>
 		<table class="overview">
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
             	<tr>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
+            		<td><input type="text" pattern="[0-9]*" maxlength="2" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
 		</table>
 		<div class="ourClub"></div>
