Skip match report preview screen just open the email Oh, and within the app drop back to the previous page

--- a/live/club_webapps/beeston_fields.html
+++ b/live/club_webapps/beeston_fields.html
@@ -316,8 +316,8 @@
 	<div id="scorecard">
             <div class="toolbar">
                 <h1>Scorecard</h1>
-                <a class="back" href="#scorecard">Match</a>
-                <a class="button flip" id="ShowPreview" href="#notes">Report</a>
+                <a class="back" href="#match">Match</a>
+                <a class="button flip" id="SendMail" href="#">Email</a>
             </div>
 
 		<table id="ovsummary" class="summary">
@@ -325,7 +325,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit>Aces</td>
+            		<td id="acetit">Aces</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
@@ -407,7 +407,6 @@
             <div class="toolbar">
                 <h1>Match Report</h1>
                 <a class="back" href="#">back</a>
-                <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
 
 		<h2>Email Subject</h2>
