--- a/live/club_webapps/woodborough.html
+++ b/live/club_webapps/woodborough.html
@@ -219,16 +219,16 @@
 	<div id="scorecard">
             <div class="toolbar">
                 <h1>Scorecard</h1>
-                <a class="back" href="#scorecard">Match</a>
-                <a class="button flip" id="ShowPreview" href="#notes">Report</a>
+                <a class="back" href="#match">Match</a>
+                <a class="button flip" id="SendMail" href="#match">Email</a>
             </div>
 
 		<table id="ovsummary" class="summary">
             	<tr>
             		<td></td>
-            		<td>Rubbers</td>
-            		<td>Games</td>
-            		<td>Aces</td>
+            		<td id="rubbertit">Rubbers</td>
+            		<td id="gametit">Games</td>
+            		<td id="acetit">Aces</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
@@ -310,7 +310,6 @@
             <div class="toolbar">
                 <h1>Match Report</h1>
                 <a class="back" href="#">back</a>
-                <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
 
 		<h2>Email Subject</h2>
