--- a/live/club_webapps/david_lloyd_wb.html
+++ b/live/club_webapps/david_lloyd_wb.html
@@ -203,8 +203,8 @@
 	<div id="scorecard">
             <div class="toolbar">
                 <h1>Scorecard</h1>
-                <a class="back" href="#scorecard">Match</a>
-                <a class="button flip" id="ShowPreview" href="#notes">Report</a>
+                <a class="back" href="#match">Match</a>
+                <a class="button flip" id="SendMail" href="#">Email</a>
             </div>
 
 		<table id="ovsummary" class="summary">
@@ -212,7 +212,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit>Aces</td>
+            		<td id="acetit">Aces</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
@@ -294,7 +294,6 @@
             <div class="toolbar">
                 <h1>Match Report</h1>
                 <a class="back" href="#">back</a>
-                <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
 
 		<h2>Email Subject</h2>
