Application updates now prompt a dialog box Users then have a choice...
Pressing ok will reload the webapp so the update is immediately available
Alternatively they can carry on with what they were doing (pressing cancel)

Either way next time the app is loaded the updated version will be used

--- a/live/club_webapps/woodborough.html
+++ b/live/club_webapps/woodborough.html
@@ -220,7 +220,7 @@
             <div class="toolbar">
                 <h1>Scorecard</h1>
                 <a class="back" href="#match">Match</a>
-                <a class="button flip" id="SendMail" href="#match">Email</a>
+                <a class="button flip" id="SendMail" href="#">Email</a>
             </div>
 
 		<table id="ovsummary" class="summary">
