cosmetic change to front page titles should fix issue with truncated clubnames step back esthetically so may be temporary

--- a/live/club_webapps/beeston_valley.html
+++ b/live/club_webapps/beeston_valley.html
@@ -55,10 +55,11 @@
 
         <div id="home" class="current">
             <div class="toolbar">
-                <h1>Beeston Valley</h1>
+                <h1>Scorecard</h1>
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
+            <h1>Beeston Valley</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -66,11 +67,10 @@
 		</div>
 	    </div>
 	    
-	    <h2>Scorecards (offline)</h2>
             <ul class="rounded">
                 <li class="arrow"><a href="#teams">Teams</a></li>
 	    </ul>
-            <h2>NottsBA (online)</h2>
+            <h2>NottsBA</h2>
             <ul class="rounded online-required">
                 <li class="forward"><a href="http://www.nottsba.co.uk/mobile/club_tables.php?cnm=beeston_valley" target="_webapp">League Results</a></li>
                 <li class="forward"><a href="http://www.nottsba.co.uk/mobile/venues.php" target="_webapp">Venues</a></li>
